// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenuItem props disabled 1`] = `
<button
  class="euiContextMenuItem emotion-euiContextMenuItem-m-center-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  />
</button>
`;

exports[`EuiContextMenuItem props icon 1`] = `
<div
  class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
>
  <span
    class="euiIcon fa-user emotion-euiContextMenu__icon"
  />
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  />
</div>
`;

exports[`EuiContextMenuItem props size m 1`] = `
<div
  class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  />
</div>
`;

exports[`EuiContextMenuItem props size s 1`] = `
<div
  class="euiContextMenuItem emotion-euiContextMenuItem-s-center"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text-s"
  />
</div>
`;

exports[`EuiContextMenuItem renders 1`] = `
<a
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2 emotion-euiContextMenuItem-m-center-euiTestCss"
  data-test-subj="test subject string"
  href="url"
  rel="noreferrer"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  >
    Hello
  </span>
</a>
`;
